// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item display Test  empty 1`] = `
<div>
  <h3>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      to="/edit/undefined"
    >
      <button>
        Edit
      </button>
    </NavLink>
    (description  : 
    ) (amount       : 
    ) ( note         : 
    ) (ceateAt      : 
    )
  </h3>
</div>
`;

exports[`Item display Test 1`] = `
<div>
  <h3>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      to="/edit/undefined"
    >
      <button>
        Edit
      </button>
    </NavLink>
    (description  : 
    gas Bill
    ) (amount       : 
    200
    ) ( note         : 
    this is a Note(1)
    ) (ceateAt      : 
    1970 01 01
    )
  </h3>
</div>
`;
